--- a/css/style.css
+++ b/css/style.css
@@ -169,22 +169,6 @@ header{
     width: 100%;
     text-align: center; */
 }
-/* header .text_logo{
-    font-family:'Gill Sans', 'Gill Sans MT', 'Montserrat', sans-serif;
-    font-weight: normal;
-    font-size: 27px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 1px;
-}
-header .subdesc{
-    font-size: 9px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -2px;
-} */
 .smpMenu{
     position: fixed;
     top: 0px;
@@ -274,6 +258,20 @@ header .subdesc{
     padding-bottom: 32px;
 }
 @media screen and (min-width:767px) and ( max-width:992px) {
+    .smpMenu .humberger{
+        width:50px;
+        height:50px;
+        position: absolute;
+        top: 0px;
+        left:-60px;
+    }
+    .smpMenu.open .humberger{
+        left: -50px;
+    }
+    .smpMenu .humberger span {
+        width: 40px;
+        left: 5px;
+    }
 }
 @media screen and (min-width:993px) {
     header .humberger,
@@ -297,10 +295,6 @@ header .subdesc{
     width: 100%;
     height: auto;
 }
-img.top-tab,
-img.top-pc{
-    display: none;
-}
 #top-image .logo{
     position: absolute;
     top: 8px;
@@ -308,13 +302,13 @@ img.top-pc{
 }
 #top-image .logo img{
     width: 70vw;
-    margin-bottom: 8px;
+    margin-bottom: 3vw;
 }
 #top-image .logo p{
     color: white;
     font-weight: bold;
     font-size: 4.5vw;
-    padding: 2px 0;
+    padding: 1.5vw 0;
 }
 #top-image .cap1{
     width: 33vw;
@@ -336,7 +330,7 @@ img.top-pc{
     font-size: 6.5vw;
     line-height: 9vw;
     color: white;
-    padding-top: 0;
+    padding-top: 2vw;
 }
 #top-image .catch{
     position: absolute;
@@ -353,7 +347,7 @@ img.top-pc{
 #top-image .cap2 span,
 #top-image .cap3 span{
     font-family: 'Montserrat', sans-serif;
-    font-size: 0.1vw;
+    font-size: 10px;
     line-height: 2vw;
     display: block;
 }
@@ -374,7 +368,7 @@ img.top-pc{
 }
 #top-image .cap3 .holizontal_list li{
     font-weight: bold;
-    font-size: 1vw;
+    font-size: 11px;
     line-height: 1.3;
     
     letter-spacing: 0;
@@ -397,39 +391,6 @@ img.top-pc{
     content:"|";
     padding: 0 2px;
 }
-
-/*
-.mainDesc{
-    background-color: #FCF4E8;
-    padding: 16px 0;
-    text-align: center;
-}
-.mainDesc h2{
-    font-weight:bold;
-    padding: 16px;
-    margin-bottom:8px;
-    display: inline-block;
-    position: relative;
-}
-.mainDesc h2 span{
-    height: 2px;
-    left:0;
-    right:0;
-    border-top: 1px solid #151515;
-
-}
- .mainDesc h2 span.bdtop:nth-child(1){
-    top:6px;
-}
-.mainDesc h2 span.bdtop:nth-child(2){
-    top:10px;
-}
-.mainDesc h2 span.bdtop:nth-child(3){
-    bottom:6px;
-}
-.mainDesc h2 span.bdtop:nth-child(4){
-    bottom:10px;
-} */
 .numbers1{
     text-align: left;
 }
@@ -473,38 +434,186 @@ img.top-pc{
     .numbers1 li::before{
         left: 38px;
     }
-    img.top-tab{
-        display: block;
+    #top-image .logo{
+        top: 8px;
+        left: 16px;
     }
-    img.top-smp,
-    img.top-pc{
-        display: none;
+    #top-image .logo img{
+        width: 40vw;
+        margin-bottom: 16px;
+    }
+    #top-image .logo p{
+        font-size: 2.5vw;
+        padding: 4px 0;
+    }
+    #top-image .cap1{
+        width: 150px;
+        height:150px;
+        top: 24px;
+        left: initial;
+        right: 45px;
+    }
+    #top-image .cap1 p:nth-child(1){
+        font-size: 20px;
+        padding-top: 32px;
+    }
+    #top-image .cap1 p:nth-child(2){
+        font-size: 30px;
+        line-height: 1.3;
+        padding-top: 0px;
+    }
+    #top-image .catch{
+        top: 52%;
+        width: 95%;
+        left: 24px;
+        transform: rotate(-10deg);
+    }
+    #top-image .cap2 ul li {
+        font-size: 1.8vw;
+        line-height: 1.3;
+    }
+    #top-image .cap2{
+        right: 16px;
+        bottom: 8px;
+    }
+    #top-image .cap3{
+        width: 40vw;
+        left: initial;
+        bottom: 8px;
+        right: 25vw;
+    }
+    #top-image .cap3 .holizontal_list li {
+        font-size: 1.8vw;
+    }
+    #top-image .cap3 .holizontal_list.mo li{
+        font-size: 2.4vw;
+    }
+    #top-image .cap2 span, #top-image .cap3 span {
+        font-size: 11px;
+        line-height: 1;
     }
 }
-@media screen and (min-width:993px) {
+@media screen and (min-width:993px){
+    #top-image .logo{
+        top: 24px;
+        left: 24px;
+    }
+    #top-image .logo img{
+        width: 35vw;
+        margin-bottom: 16px;
+    }
+    #top-image .logo p{
+        font-size: 2.3vw;
+        padding: 4px 0;
+    }
+    #top-image .cap1{
+        width: 160px;
+        height:160px;
+        top: 2vw;
+        right: 24px;
+        left: initial;
+    }
+    #top-image .cap1 p:nth-child(1){
+        font-size: 2vw;
+        padding-top: 28px;
+    }
+    #top-image .cap1 p:nth-child(2){
+        font-size: 3vw;
+        line-height: 1.3;
+        padding-top: 0px;
+    }
+    #top-image .catch{
+        top: 24vw;
+        width: 95%;
+        left: 24px;
+        transform: rotate(-10deg);
+    }
+    #top-image .cap2 ul li {
+        font-size: 20px;
+        line-height: 1.3;
+    }
+    #top-image .cap2{
+        right: 24px;
+        bottom: 16px;
+    }
+    #top-image .cap3{
+        width: 70%;
+        left: initial;
+        bottom: 16px;
+        left: 24px;
+        right: initial;
+    }
+    #top-image .cap3 .holizontal_list li {
+        font-size: 16px;
+    }
+    #top-image .cap3 .holizontal_list.mo li{
+        font-size: 20px;
+    }
+    #top-image .cap2 span, #top-image .cap3 span {
+        font-size: 11px;
+        line-height: 1;
+    }
+}
+@media screen and (min-width:1200px) {
     #top-image{
         margin: 0 auto;
+        max-width: 1200px;
     }
-    .numbers1 li{
-        font-size: 17px;
-        margin-top: 24px;
-        background-size: 32px;
-        padding-left: 48px;
+    #top-image .logo{
+        top: 24px;
+        left: 24px;
     }
-    .numbers1 li::before{
-        top: 16px;
-        left: 40px;
+    #top-image .logo img{
+        width: 400px;
+        margin-bottom: 24px;
+    }
+    #top-image .logo p{
+        font-size: 24px;
+        padding: 4px 0;
+    }
+    #top-image .cap1{
+        width: 185px;
+        height:185px;
+        top: 32px;
+    }
+    #top-image .cap1 p:nth-child(1){
+        font-size: 24px;
+        padding-top: 32px;
+    }
+    #top-image .cap1 p:nth-child(2){
+        font-size: 36px;
+        line-height: 1.3;
         padding-top: 8px;
     }
-    .mainDesc{
-        padding: 32px 0;
+    #top-image .catch{
+        top: 310px;
+        width: 95%;
     }
-    img.top-pc{ 
-        display: block;
+    #top-image .cap2 ul li {
+        font-size: 20px;
+        line-height: 1.3;
+        padding: 8px 24px;
     }
-    img.top-smp,
-    img.top-tab{
-        display: none;
+    #top-image .cap2{
+        right: 24px;
+        bottom: 16px;
+    }
+    #top-image .cap3{
+        width: 70%;
+        left: initial;
+        bottom: 16px;
+        right: initial;
+        left: 24px;
+    }
+    #top-image .cap3 .holizontal_list li {
+        font-size: 16px;
+    }
+    #top-image .cap3 .holizontal_list.mo li{
+        font-size: 20px;
+    }
+    #top-image .cap2 span, #top-image .cap3 span {
+        font-size: 11px;
+        line-height: 1;
     }
 }
 
